kubernetes/personal/applications/homer/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: homer
  namespace: homer
  labels:
    app: homer

spec:
  replicas: 1

  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
        - name: main

          image: b4bz/homer:v25.11.1

          # env:
          #   - name: INIT_ASSETS
          #     value: "1"

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"

          ports:
            - name: http
              containerPort: 80

          volumeMounts:
            - name: config
              mountPath: /www/assets
              readOnly: true
              
      volumes:
        - name: config
          secret:
            secretName: config
            defaultMode: 0644
