kubernetes/personal/applications/homer/service.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: homer
  namespace: homer
  labels:
    app: homer

spec:
  type: ClusterIP
  selector:
    app: homer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
